@@ -1,3 +1,5 @@
+- Refactor: Add method removeGrade to EnrolmentEvaluation
+
 34.3.0 (01-09-2022)
 - Refactor: Change ProgramConclusion targetState slot to RegistrationStateTypeEnum
 - Refactor: Replace usage of RegistrationStateType by RegistrationStateTypeEnum
